2008-04-08  Vincent Untz  <vuntz@gnome.org>

	Use the right directory for timezone data on Solaris.
	Based on patch by Brian Cameron <brian.cameron@sun.com>
	Fix bug #515085.
	Also use the right evolution text domain for timezone translations.

	* Makefile.am: remove definition of SYSTEM_ZONEINFODIR, and update the
	evolution text domain
	* clock-zoneinfo.h: define SYSTEM_ZONEINFODIR
	* clock-zonetable.[ch]: (clock_zonetable_new): do not take an argument,
	and directly use the defined value for the directory
	* clock.c: (fill_clock_applet): updated

2008-04-08  Vincent Untz  <vuntz@gnome.org>

	* clock-map.c: (clock_map_new), (clock_map_init): minor cleanup

2008-04-08  Vincent Untz  <vuntz@gnome.org>

	* clock-map.c: add enums for markers and an array for marker files
	(clock_map_new),: do not load the marker pixbuf here
	(clock_map_init): do it here, with a simple loop
	(clock_map_finalize):
	(clock_map_place_location): trivial updates to use the enum

2008-04-08  Vincent Untz  <vuntz@gnome.org>

	Remove the rotation step in the map. I believe the goal was to make it
	possible to display a map where the center is not 0/0 (lat/lon) but the
	center is hardcoded to 0/0 right now and I don't think it makes sense
	to rotate the map since this view is really usual.
	Might fix #516345.

	* clock-map.c: (clock_map_finalize), (clock_map_expose),
	(clock_map_display): trivial updates
	(clock_map_rotate): kill

2008-04-08  Vincent Untz  <vuntz@gnome.org>

	* clock-map.c: make last_refresh a time_t since we don't need struct tm
	(clock_map_init): initialize last_refresh
	(clock_map_display): update the last_refresh time here
	(clock_map_needs_refresh): simplify a bit, do not update the
	last_refresh time here since we didn't refresh anything, and also take
	into account the fact that the clock can go back in the past when
	changing time

2008-04-08  Vincent Untz  <vuntz@gnome.org>

	* clock-location.[ch]: remove clock_location_new_from_env(). Not really